<resources>
    <string name="app_name">ShoeStore</string>

<!--    Screens-->
    <string name="label_splash">Splash</string>
    <string name="label_shoe_list">Shoe List</string>
    <string name="label_shoe_detail">Shoe Detail</string>


    <!--    Login -->
    <string name="label_email">Email ID</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_new_login">New Login</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_clear">Clear</string>

    <!--    Welcome-->
    <string name="label_welcome">Welcome!</string>
    <string name="label_next">Next</string>

    <!--    Instruction-->
    <string name="label_instruction">Instruction</string>
    <string name="label_instruction_info">This is an dummy instruction text. Hope you are having a nice day! Just click the button below &amp; start shopping awesome shoes!!!</string>
    <string name="label_start_shopping">Start shopping</string>

    <!--    Shoe List-->
    <string name="size_text">Size: %s</string>
    <string name="title_activity_login">LoginActivity</string>

<!--    Shoe Details-->
    <string name="label_shoe_name">Shoe name :</string>
    <string name="label_company">Company :</string>
    <string name="label_shoe_size">Shoe size :</string>
    <string name="label_shoe_description">Shoe description :</string>
    <string name="hint_shoe_name">Nike Hypervenom</string>
    <string name="hint_company">Nike</string>
    <string name="hint_shoe_size">6.9</string>
    <string name="hint_shoe_description">Nice shoe...</string>
    <string name="label_save">Save</string>
    <string name="label_add">Add</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


<!--    Menu-->
    <string name="logout">Logout</string>
    <string name="add">Add</string>


</resources>
